modified cors policy for authorization
